# akrmn.github.io

./: .ghcid  .gitignore  CNAME  README.md  akrmn-github-io.cabal  contact.md  index.html  site.hs  stack.yaml
_site/: index.html
_site/about/: index.html
_site/archive/: index.html
_site/contact/: index.html
_site/posts/example0/: index.html
posts/: 2019-03-03-ex.md  ex.md  example0.markdown  third.md
posts/ex/: index.html
posts/third/: index.html
sh/: deploy.sh
templates/: default.html
