name:                akrmn-github-io
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/akrmn-github-io#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2019 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable akrmn-github-io
  main-is:             site.hs
  default-language:    Haskell2010
  ghc-options:         -threaded
  build-depends:       base >= 4.7 && < 5,
                       hakyll,
                       here,
                       filepath
